--- a/privacy.html
+++ b/privacy.html
@@ -4,15 +4,145 @@
     https://docs.google.com/document/d/10KfWmeNHWcO43RbOO2dRvK6970xnZw526xHqJDdyVEM/edit
 </div>
 
+<div>
+    <p>At Kasi Money, we value your privacy and strive to protect your personal data. Kasi Money will only collect and use your personal data in accordance with this Privacy Policy and our Terms of Use.</p>
+</div>
 
-<p><strong>This Privacy Policy explains:</strong></p>
+<div>
+    <p>Reference in this policy to "Kasi Money", "we", "us", "our" or any similar term is to KASI PAYMENTS (PTY) LIMITED (CIPC reg.no 2023/589554/07), who is the data controller.</p>
+</div>
+
+<h3>This Privacy Policy explains:</h3>
 <ul>
-    How we collect personal data
-    What data do we collect
-    How we use cookies
-    How we use your personal data
-    How we share personal data
-    Security of your personal data
-    Global company
-    Additional matters relating to personal data
+    <li>How we collect personal data</li>
+    <li>What data do we collect</li>
+    <li>How we use cookies</li>
+    <li>How we use your personal data</li>
+    <li>How we share personal data</li>
+    <li>Security of your personal data</li>
+    <li>Global company</li>
+    <li>Additional matters relating to personal data</li>
 </ul>
+
+<h3>How we collect personal data</h3>
+<p>When we open and operate an account for you, provide you with our products and services, or communicate with you, we may collect your personal data. We do this in various ways, including:</p>
+<ul>
+    <li>when you provide it to us such as when signing up for a Kasi Money account, use our products and services, or take part in customer surveys, competitions and promotions;</li>
+    <li>when you communicate with us by email, WhatsApp chat, telephone or any other means, we collect the communication and any data provided in it;</li>
+    <li>when you use the Kasi Money platform we collect information on your transactions and other use of your Kasi Money account;</li>
+    <li>when we obtain information from third parties such as identity verification services, credit reference agencies, and regulatory and enforcement agencies.</li>
+</ul>
+
+<h3>What data do we collect</h3>
+<p>This list is not exhaustive but includes the key sources of data that we collect in order to manage your account professionally and efficiently and in accordance with applicable laws.</p>
+<ul>
+    <li>Your names and surname</li>
+    <li>Your date of birth</li>
+    <li>Your mobile device number</li>
+    <li>Your country of birth</li>
+    <li>Your place of residence</li>
+    <li>Images of your face and identity document required for Financial Intelligence Centre (FICA) verification</li>
+    <li>Your email address and phone number</li>
+    <li>Images of your secondary identity document/ “visa” if applicable </li>
+    <li>A document of your proof of address if applicable </li>
+    <li>Your transactional history on our account</li>
+    <li>Your WhatsApp chat history</li>
+    <li>Recordings of your phone conversations with our team members via our official telephone lines</li>
+</ul>
+
+<h3>How we use cookies</h3>
+<p>We also collect personal data through the use of cookies. Cookies (and other similar technologies) help us give you the best experience of using our site.
+    Cookies are small data files that we or companies we work with may place on your computer or other devices when you visit our website. They allow us to remember your actions or preferences over time.
+    We use cookies to collect data that helps us to:</p>
+<ul>
+    <li>track site usage and browsing behaviour;</li>
+    <li>allow you to sign in to your account and navigate through the website;</li>
+    <li>tailor our website functionality to you personally by letting us remember your preferences;</li>
+    <li>improve how our website performs;</li>
+    <li>allow third parties to provide services to our website;</li>
+    <li>monitor the effectiveness of our promotions and advertising; and</li>
+    <li>mitigate risk, enhance security and help prevent fraud.</li>
+</ul>
+<p>We use both session and persistent cookies. Session cookies are deleted when you close down your browser, while persistent cookies remain on your device until they expire or you delete them. Persistent cookies allow us to remember things about you when you visit our website again.</p>
+
+<h3>Third-party cookies</h3>
+<p>We may use third-party providers to help us determine which of our advertisements are most likely to be of interest to you. These providers may use behavioural information, such as how you navigate the internet, to provide relevant advertisements to you.</p>
+<p>We may also allow some of these companies to use tracking pixels. Tracking pixels may be used to collect and store information about visits to our website, such as which pages you viewed and how long you spent on the website, as well as the specific advertisement that you clicked to visit our site. No personally identifiable information is stored on these cookies. The information reported to us is aggregated and anonymous. We use this information to understand, for example, the effectiveness of our advertising and marketing.</p>
+<p>Overall, cookies help us provide you with a better website, by enabling us to monitor which pages you find useful and which you do not. A cookie in no way gives us access to your computer or any information about you, other than the data you choose to share with us.</p>
+<p>By signing up for an account with Kasi Money, or continuing to use our website, you agree to our use of cookies as set out in this policy. You may decline our cookies if your browser or browser add-on permits, but doing so may interfere with your use of Kasi Money’s services. For information on how to delete or reject cookies, you can consult the help function within your browser.</p>
+
+<h3>How we use your personal data</h3>
+<p>We use personal data for one or more of the following purposes:</p>
+<ul>
+    <li>to verify your identity in accordance with Know Your Customer (KYC), Anti-Money Laundering (AML) and sanctions screening requirements;</li>
+    <li>to manage and maintain your account with us;</li>
+    <li>to prevent fraudulent or unauthorised use of our products and services;</li>
+    <li>to better manage our business and your relationship with us;</li>
+    <li>to improve our products and services, and to develop new products and services;</li>
+    <li>to notify you about benefits and changes to the features of our products and services;</li>
+    <li>to provide you with personalised advertising and marketing;</li>
+    <li>to respond to your enquiries and to resolve disputes.</li>
+</ul>
+
+<p>Where necessary to protect our legal rights and interest, or the interests of others, we also use personal data in relation to legal claims, compliance, audit, risk management and regulatory functions. We may also use personal data in connection with the acquisition, merger or sale of a business.</p>
+
+<h3>How we share personal data</h3>
+<p>We share personal data with:</p>
+<ul>
+    <li>any person that works for us or for one of our group companies;</li>
+    <li>any entity that forms part of the Kasi Money group of companies, including where relevant the Kasi Money operating entity in the country or region in which you live;</li>
+    <li>financial and other institutions we partner with to provide our products and services;</li>
+    <li>companies and organisations that provide services to us, including in relation to technical infrastructure, marketing and analytics, and web and app development;</li>
+    <li>companies and organisations that assist us with identity verification, background screening, due diligence and processing or otherwise fulfilling transactions that you have requested;</li>
+    <li>our professional advisers, consultants and other similar services. 
+    We will otherwise treat your personal data as private and confidential and will not share it with other parties except:</li>
+    <li>where you have given permission;</li>
+    <li>where we believe it is reasonably necessary to comply with any law, regulation, legal process or governmental request, to enforce our Terms of Use or other agreements, or to protect the rights, property, or safety of us, our customers or others;</li>
+    <li>where we may transfer rights and obligations pursuant to our agreement with you.</li>
+</ul>
+
+<h3>Security of your personal data</h3>
+<p>Kasi Money places great importance on ensuring the security of your personal data. We regularly review and implement up-to-date technical and organisational security measures when processing your personal data.</p>
+<p>Employees of Kasi Money are trained to handle personal data securely and with the utmost respect, failing which they may be subject to disciplinary action.</p>
+
+<h3>Global company</h3>
+<p>The personal data we collect may be transferred to, stored and processed outside of the jurisdiction in which you reside, and the laws of those countries may differ from the laws applicable in your own country. For example, data collected in the South Africa (SA) may be transferred to, stored and processed at a destination(s) outside of the SA. Any processing of such data will be undertaken by our staff, or the staff of our third-party service providers, whose roles will include verifying your identity, processing payment details, and providing customer support.</p>
+<p>By accepting this Privacy Policy, and then submitting your personal data, you agree to the transfer, storing or processing of it outside of your jurisdiction.</p>
+
+<h3>Additional matters relating to personal data
+    Retention of personal data
+    </h3>
+<p>Kasi Money will retain your personal data, in compliance with this Privacy Policy and the Terms of Use, for the duration of your relationship with us, and afterwards for such period as may be necessary for our legitimate business purposes (including compliance with our legal obligations, preventing fraud, resolving disputes and enforcing agreements), to protect the interests of Kasi Money and its customers, and as required by law.
+</p>
+
+<h3>Incomplete personal data</h3>
+<p>Where indicated (for example in application forms or account opening forms), it is obligatory to provide your personal data to us to enable us to process your application for our products or services. Should you decline to provide such personal data, we may not be able to process your application/request or provide you with our products or services.</p>
+
+<h3>Your right to access, update, or remove your personal data</h3>
+<p>Most of the data Kasi Money collects, and the ways in which we use it, are necessary for us to provide and improve the services we provide to you, or to comply with our obligations. In certain situations, we give you the ability to choose how we use your data.</p>
+<p>Depending on the country in which you live, you may have certain rights under data protection law, including the right to object to the processing of your personal data or to request that we:</p>
+<ul>
+    <li>provide you with a copy of your personal data (including in a format that can be shared with a new provider); or</li>
+    <li>correct, delete, or restrict the processing of your personal data.</li>
+</ul>
+<p>Please submit a support ticket if you would like to exercise any of the above rights. These rights are limited in some situations, such as where we are legally required to process your data, and may limit your ability to use our products and services.</p>
+
+<h3>Data breaches</h3>
+<p>We will notify you and the relevant supervisory authority as soon as we become aware of any data breach that is likely to result in a risk to your rights and freedoms.</p>
+
+<h3>Revisions to this Privacy Policy</h3>
+<p>We may amend this Privacy Policy from time to time. We will do our best to notify you of any amendments to the Privacy Policy and any such notice will be posted on our application or our website, or sent by email to the address associated with your Kasi Money Account.</p>
+
+<h3>Contacting Kasi Money in relation to personal data</h3>
+<p>Should you have any query in relation to this Privacy Policy or how we handle your personal data, please contact us by an email to support@kasi.money
+    If you are dissatisfied with the outcome of any request for information referred to us, you may approach the Information Regulator of South Africa.
+    </p>
+<p>The contact details are as follows:</p>
+<ul>
+    <li>The Information Regulator (South Africa)</li>
+    <li>SALU Building, 316 Thabo Sehume Street, Pretoria</li>
+    <li>Tel: 012 406 4818 | Fax: 086 500 3351| Email: inforeg@justice.gov.za</li>
+</ul>
+
+
+
