--- a/index.html
+++ b/index.html
@@ -6,144 +6,44 @@
 </head>
 
 <body>
-      <div class="grid">
-            <article class="item">
-                  <div class="item-capt">first-child</div>
-                  <div class="item-content">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
-                  </div>
-            </article>
-      </div>
 
-      <div class="grid">
-            <article class="item">
-                  <div class="item-capt">last-child</div>
-                  <div class="item-content --2">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
+      <div class="card">
+            <div class="cards">
+                  <div class="card-figma-1">
+                        <div class="figma"></div>
+                        <div class="figma"></div>
+                        <div class="figma"></div>
+                        <div class="figma"></div>
+                        <div class="figma"></div>
                   </div>
-            </article>
-      </div>
-
-      <div class="grid">
-            <article class="item">
-                  <div class="item-capt">nth-child( 2 )</div>
-                  <div class="item-content --3">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
+                  <div class="card-figma-2">
+                        <div class="block-figma-2">
+                              <div class="figma-2"></div>
+                              <div class="figma-2"></div>
+                              <div class="figma-2"></div>
+                              <div class="figma-2"></div>
+                              <div class="figma-2"></div>
+                        </div>
                   </div>
-            </article>
-      </div>
-
-      <div class="grid">
-            <article class="item">
-                  <div class="item-capt">nth-last-child( 2 )</div>
-                  <div class="item-content --4">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
+                  <div class="card-figma-3">
+                        <div class="block-figma-3">
+                              <div class="figma-3"></div>
+                              <div class="figma-3"></div>
+                              <div class="figma-3"></div>
+                              <div class="figma-3"></div>
+                              <div class="figma-3"></div>
+                        </div>
                   </div>
-            </article>
-      </div>
-
-      <div class="grid">
-            <article class="item">
-                  <div class="item-capt">nth-child( odd )</div>
-                  <div class="item-content --5">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
+                  <div class="card-figma-4">
+                        <div class="block-figma-4">
+                              <div class="figma-4"></div>
+                              <div class="figma-4"></div>
+                              <div class="figma-4"></div>
+                              <div class="figma-4"></div>
+                              <div class="figma-4"></div>
+                        </div>
                   </div>
-            </article>
-      </div>
-
-      <div class="grid">
-            <article class="item">
-                  <div class="item-capt">nth-child( even )</div>
-                  <div class="item-content --6">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
-                  </div>
-            </article>
-      </div>
-
-      <div class="grid">
-            <article class="item">
-                  <div class="item-capt">nth-child( n+4 )</div>
-                  <div class="item-content --7">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
-                  </div>
-            </article>
-      </div>
-
-      <div class="grid">
-            <article class="item">
-                  <div class="item-capt">nth-child( 3n-1 )</div>
-                  <div class="item-content --8">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
-                  </div>
-            </article>
-      </div>
-
-      <div class="grid">
-            <article class="item">
-                  <div class="item-capt">nth-child( 3n+1 )</div>
-                  <div class="item-content --9">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
-                  </div>
-            </article>
-      </div>
-
-      <div class="grid-1">
-            <article class="item">
-                  <div class="item-capt">nth-child( 4n )</div>
-                  <div class="item-content --10">
-                        <div class="item-element">1</div>
-                        <div class="item-element">2</div>
-                        <div class="item-element">3</div>
-                        <div class="item-element">4</div>
-                        <div class="item-element">5</div>
-                        <div class="item-element">6</div>
-                  </div>
-            </article>
+            </div>
       </div>
 
 </body>
