--- a/index.html
+++ b/index.html
@@ -6,46 +6,98 @@
 </head>
 
 <body>
+      <main class="main">
+            <section class="cards">
+                  <div class="figma">
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                  </div>
 
-      <div class="card">
-            <div class="cards">
-                  <div class="card-figma-1">
-                        <div class="figma"></div>
-                        <div class="figma"></div>
-                        <div class="figma"></div>
-                        <div class="figma"></div>
-                        <div class="figma"></div>
+                  <div class="figma">
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
                   </div>
-                  <div class="card-figma-2">
-                        <div class="block-figma-2">
-                              <div class="figma-2"></div>
-                              <div class="figma-2"></div>
-                              <div class="figma-2"></div>
-                              <div class="figma-2"></div>
-                              <div class="figma-2"></div>
-                        </div>
-                  </div>
-                  <div class="card-figma-3">
-                        <div class="block-figma-3">
-                              <div class="figma-3"></div>
-                              <div class="figma-3"></div>
-                              <div class="figma-3"></div>
-                              <div class="figma-3"></div>
-                              <div class="figma-3"></div>
-                        </div>
-                  </div>
-                  <div class="card-figma-4">
-                        <div class="block-figma-4">
-                              <div class="figma-4"></div>
-                              <div class="figma-4"></div>
-                              <div class="figma-4"></div>
-                              <div class="figma-4"></div>
-                              <div class="figma-4"></div>
-                        </div>
-                  </div>
-            </div>
-      </div>
 
+                  <div class="figma figma-border figma-not-fill-color">
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                  </div>
+
+                  <div class="figma figma-border-white figma-not-fill-color ">
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                  </div>
+            </section>
+
+            <section class="cards">
+                  <div class="figma">
+                        <!-- 
+                              Задача:
+                              для цієї карочки додати стилі які будуть праюцювати при наведенні, 
+                              під час наведення фон карточки повинен змінюватися на інший який
+                              вибереш,та карточка повинна збільшуватися на 20%.
+                              також додати плавність через transition, з часом плавності в 3 секунди
+                        -->
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                  </div>
+
+                  <div class="figma">
+                        <!-- 
+                              Задача 2:
+                              додати до цієїї карточки стилі через keyframes та animation, стилі додавати у файл keyframes.css,
+                              анімація повинна бути без кінечною з тривалістю в 10секунд.
+                              Суть анімаціїї в тому щоб карточка оберталася використовуючи rotate(360deg)
+                        -->
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                  </div>
+
+                  <div class="figma figma-border figma-not-fill-color">
+                        <!-- 
+                              Задача 3: повторити все те що і попередній анімаціїї, тількии додавти перехід cubic-bezier()
+                              для цього потрібно перейти на сайт cubic-bezier.com та згенерувати параметри скопіювати та вставити в код.
+                              та задати тривалість в 3секунди та затримку в 7 секунд.
+                        -->
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                  </div>
+
+                  <div class="figma figma-border-white figma-not-fill-color ">
+                        <!-- 
+                              Задача 4: повторити все те що і попередній анімаціїї, тільки тепер потрібно корегувати поведінку анімації 
+                              через animation-play-state. А саме коли на карточку буде наведенно курсор миші то потрібно зупиняти анімацію.
+                              В іншому випадку анімація безкінечна
+                        -->
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                        <div class="figma-elm"></div>
+                  </div>
+            </section>
+      </main>
 </body>
 
 </html>
