--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="figma-elm"></div>
                   </div>
 
-                  <div class="figma">
+                  <div class="figma animation-1">
                         <!-- 
                               Задача 2:
                               додати до цієїї карточки стилі через keyframes та animation, стилі додавати у файл keyframes.css,
