--- a/index.html
+++ b/index.html
@@ -7,96 +7,109 @@
 
 <body>
       <main class="main">
-            <section class="cards">
-                  <div class="figma">
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                  </div>
+            <div class="key-strand">
+                  <div class="glav-keyboard">
+                        <div class="company">KeyBoards Marky</div>
+                        <div class="keyboard-1">
+                              <div class="keyboard">esc</div>
+                              <div class="keyboard">f1</div>
+                              <div class="keyboard">f2</div>
+                              <div class="keyboard">f3</div>
+                              <div class="keyboard">f4</div>
+                              <div class="keyboard">f5</div>
+                              <div class="keyboard">f6</div>
+                              <div class="keyboard">f7</div>
+                              <div class="keyboard">f8</div>
+                              <div class="keyboard">f9</div>
+                              <div class="keyboard">f10</div>
+                              <div class="keyboard">f11</div>
+                              <div class="keyboard">f12</div>
+                              <div class="keyboard">hz</div>
+                        </div>
 
-                  <div class="figma">
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                  </div>
+                        <div class="keyboard-2">
+                              <div class="keyboard">`</div>
+                              <div class="keyboard">1</div>
+                              <div class="keyboard">2</div>
+                              <div class="keyboard">3</div>
+                              <div class="keyboard">4</div>
+                              <div class="keyboard">5</div>
+                              <div class="keyboard">6</div>
+                              <div class="keyboard">7</div>
+                              <div class="keyboard">8</div>
+                              <div class="keyboard">9</div>
+                              <div class="keyboard">0</div>
+                              <div class="keyboard">-</div>
+                              <div class="keyboard">=</div>
+                              <div class="keyboard">del</div>
+                        </div>
 
-                  <div class="figma figma-border figma-not-fill-color">
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                  </div>
+                        <div class="keyboard-2">
+                              <div class="keyboard tab">Tab</div>
+                              <div class="keyboard">q</div>
+                              <div class="keyboard">w</div>
+                              <div class="keyboard">e</div>
+                              <div class="keyboard">r</div>
+                              <div class="keyboard">t</div>
+                              <div class="keyboard">y</div>
+                              <div class="keyboard">u</div>
+                              <div class="keyboard">i</div>
+                              <div class="keyboard">o</div>
+                              <div class="keyboard">p</div>
+                              <div class="keyboard">[</div>
+                              <div class="keyboard">]</div>
+                              <div class="keyboard">\</div>
+                        </div>
 
-                  <div class="figma figma-border-white figma-not-fill-color ">
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                  </div>
-            </section>
+                        <div class="keyboard-2">
+                              <div class="keyboard caps">caps</div>
+                              <div class="keyboard">a</div>
+                              <div class="keyboard">s</div>
+                              <div class="keyboard">d</div>
+                              <div class="keyboard">f</div>
+                              <div class="keyboard">g</div>
+                              <div class="keyboard">h</div>
+                              <div class="keyboard">j</div>
+                              <div class="keyboard">k</div>
+                              <div class="keyboard">l</div>
+                              <div class="keyboard">:</div>
+                              <div class="keyboard">'</div>
+                              <div class="keyboard enter">Enter</div>
+                        </div>
 
-            <section class="cards">
-                  <div class="figma">
-                        <!-- 
-                              Задача:
-                              для цієї карочки додати стилі які будуть праюцювати при наведенні, 
-                              під час наведення фон карточки повинен змінюватися на інший який
-                              вибереш,та карточка повинна збільшуватися на 20%.
-                              також додати плавність через transition, з часом плавності в 3 секунди
-                        -->
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                  </div>
+                        <div class="keyboard-2">
+                              <div class="keyboard shift">shift</div>
+                              <div class="keyboard">z</div>
+                              <div class="keyboard">x</div>
+                              <div class="keyboard">c</div>
+                              <div class="keyboard">v</div>
+                              <div class="keyboard">b</div>
+                              <div class="keyboard">n</div>
+                              <div class="keyboard">m</div>
+                              <div class="keyboard">,</div>
+                              <div class="keyboard">.</div>
+                              <div class="keyboard">/</div>
+                              <div class="keyboard shift">shift</div>
+                        </div>
 
-                  <div class="figma animation-1">
-                        <!-- 
-                              Задача 2:
-                              додати до цієїї карточки стилі через keyframes та animation, стилі додавати у файл keyframes.css,
-                              анімація повинна бути без кінечною з тривалістю в 10секунд.
-                              Суть анімаціїї в тому щоб карточка оберталася використовуючи rotate(360deg)
-                        -->
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
+                        <div class="keyboard-2">
+                              <div class="keyboard">ctrl</div>
+                              <div class="keyboard">win</div>
+                              <div class="keyboard">alt</div>
+                              <div class="keyboard prob">—</div>
+                              <div class="keyboard">alt</div>
+                              <div class="keyboard">fn</div>
+                              <div class="keyboard listi">Ξ</div>
+                              <div class="keyboard">ctrl</div>
+                              <div class="keyboard">◄</div>
+                              <div class="st">
+                                    <div class="keyboard st">▲</div>
+                                    <div class="keyboard st">▼</div>
+                              </div>
+                              <div class="keyboard">►</div>
+                        </div>
                   </div>
-
-                  <div class="figma figma-border figma-not-fill-color">
-                        <!-- 
-                              Задача 3: повторити все те що і попередній анімаціїї, тількии додавти перехід cubic-bezier()
-                              для цього потрібно перейти на сайт cubic-bezier.com та згенерувати параметри скопіювати та вставити в код.
-                              та задати тривалість в 3секунди та затримку в 7 секунд.
-                        -->
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                  </div>
-
-                  <div class="figma figma-border-white figma-not-fill-color ">
-                        <!-- 
-                              Задача 4: повторити все те що і попередній анімаціїї, тільки тепер потрібно корегувати поведінку анімації 
-                              через animation-play-state. А саме коли на карточку буде наведенно курсор миші то потрібно зупиняти анімацію.
-                              В іншому випадку анімація безкінечна
-                        -->
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                        <div class="figma-elm"></div>
-                  </div>
-            </section>
+            </div>
       </main>
 </body>
 
